css/stylesheet.css
body,h2,h3,h4,h5,h6 {
    font-family: "Raleway", sans-serif;
}

body {
  background-color: #fcfcfc;
}

h1,h2,h3,h4,h5,h6 {
  font-weight: bold;
}

h1 {
  color: black;
  margin: 10px 0;
}

h1>span {
  color: rgb(111, 0, 255);
}

h2 {
  font-size: 24px;
}

h3 {
  text-transform: uppercase;
  font-size: 18px;
}

.sidebar {
  z-index: 3;
  width: 200px;
}

.bottombar {
  border-bottom: 6px solid rgb(111, 0, 255) !important;
}

.page-content {
  margin-left: 200px;
  width: calc(100% - 200px);
}

.section {
  margin-top: 32px;
  margin-bottom: 32px;
}

footer {
  background-color: #222;
  color: white;
  position: absolute;
  width: 100%;
  z-index: 99999;
}

::selection {
  background: rgb(111, 0, 255);
  color: #fff;
  text-shadow: none;
}

a:focus, div:focus, input:focus, textarea:focus, .menu-item:focus, .button:focus{ 
  outline: 2px solid rgb(158, 87, 252); 
}

a {
  color: rgb(111, 0, 255);
  text-decoration: none;
}

a:hover{
  text-decoration: underline;
  color: rgb(158, 87, 252);
}

.previous-page {
  font-weight: bold;
}

.link-button {
  color: white;
  margin-right: 10px;
}

.menu-item:hover {
  text-decoration: none !important;
  background-color: white;
  color: rgb(111, 0, 255) !important;
}

.wrapper {
  margin-right: auto;
  margin-left:  auto; 

  max-width: 1400px; 

  padding-right: 10px; 
  padding-left:  10px;
  width: 100%;
}

.card:hover {
  transition: 0.4s;
  -webkit-transform: translateY(-5px);
  transform: translateY(-5px);
}

.card-content:hover {
  text-decoration: none;
}

.card-img {
  width:100%;
}

.card-header {
  background: rgb(111, 0, 255);
  background: linear-gradient(rgb(111, 0, 255), rgb(126, 46, 230));
  color: white;
}

.shadow {
  box-shadow: 0 16px 24px 2px rgba(0,29,63,0.14);
}

.button {
  border-radius: 30px;
  background-color: rgb(111, 0, 255);
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none !important;
  display: inline-block;
  font-size: 16px;
  margin-top: 10px;
  margin-bottom: 10px;
  cursor: pointer;
  box-shadow: 0 16px 24px 2px rgba(0,29,63,0.14);
}

.button:hover {
  background-color: rgb(158, 87, 252);
  color: white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.img-fullwidth {
  width: 100%;
  box-shadow: 0 16px 24px 2px rgba(0,29,63,0.14);
}

.img-text {
  font-style: italic;
}

label {
  font-weight: bold;
}

label>span {
  color: rgb(111, 0, 255);
}

.inputfield>input, .inputfield>textarea{
  margin-top: 5px;
  box-shadow: inset 0 1px 5px rgba(0,29,63,0.14);
}

.inputfield>textarea {
  height: 150px;
}

.submitbutton {
  margin-left: auto;
  margin-right: auto;
  margin-top: 1.5em;
  display: block;
}

.footer-section {
  padding: 15px !important;
}

.footer-link {
  color: white;
  text-decoration: underline;
}

.footer-bottom {
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.center-align {
  text-align: center;
}

.w3-container.w3-light-grey.w3-round {
  height: 8.5rem;
  border: 2px solid rgb(111, 0, 255);
}

video {
  width: 100%;
  height: auto;
}

.flexible-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.flexible-container iframe,
.flexible-container object,
.flexible-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

@media only screen and (max-width: 600px) {
  .w3-row.w3-padding-24 {
    padding-bottom: 0px!important;
  }
  .w3-row-padding.w3-padding-16 {
    padding-bottom: 0px!important;
    padding-top: 0px!important;
  }
}

@media (max-width: 993px) {
  .page-content {
    width: 100%;
  }
}
  

